# Meta-AI-Hackathon

./: .dockerignore  .gitignore  Problem_Statement.docx  README.md  TODO.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
Submission/: .env.example  Dockerfile  README.md  baseline.py  client.py  inference.py  requirements.txt  test_local.py  validate.py
Submission/server/: app.py  environment.py  tasks.py
module-1/: README.md  notebook.ipynb
module-2/: README.md  notebook.ipynb
module-3/: notebook.ipynb
module-4/: README.md  notebook.ipynb
module-5/: README.md  notebook.ipynb
server/: environment.py  tasks.py
